sync with github.com/clockfly/gearpump